--- a/web/index.html
+++ b/web/index.html
@@ -208,7 +208,7 @@
     <!--Login Page-->
     <section id="LoginPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
 
-        <div class="h-75  border border-3 border-white rounded-1 shadow" style="position: relative;top: 95px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
+        <div class="h-75  border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
 
             <div class="text-center" style="position: relative;top: 20px">
                 <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">LOG IN</h1>
@@ -217,14 +217,14 @@
             <form class="ms-5 me-5" style="position: relative; top: 50px;">
                 <!-- Email input -->
                 <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="text" id="username" class="form-control  border border-2 border-white bg-light rounded-3" />
-                    <label class="form-label text-white fw-light" for="username" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                    <input type="text" id="loginusername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                    <label class="form-label text-white fw-light" for="loginusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
                 </div>
 
                 <!-- Password input -->
                 <div class="form-outline mb-4 ms-5 me-5">
-                    <input type="password" id="password" class="form-control  border border-2 border-white bg-light" />
-                    <label class="form-label text-white fw-light" for="password" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                    <input type="password" id="loginpassword" class="form-control  border border-2 border-white bg-light" />
+                    <label class="form-label text-white fw-light" for="loginpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
                 </div>
 
                 <!-- 2 column grid layout for inline styling -->
@@ -243,8 +243,11 @@
                     </div>
                 </div>
 
-                <!-- Submit button -->
-                <button type="button" class="btn btn-primary btn-block mb-4 w-25 text-center " style="display: inline;position: relative;left: 37%;right: 0;">Login</button>
+                <div class="mb-4  me-5 ms-5">
+                    <!-- Submit button -->
+                    <button type="button" class="btn btn-block text-center text-white " style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black">Log in</button>
+
+                </div>
 
                 <!-- Register buttons -->
                 <div class="text-center">
@@ -273,13 +276,136 @@
 
     </section>
 
-    <section id="ForgotPasswordPage" style="width: 100%;height: 100vh ; background-color: pink">
+    <section id="ForgotPasswordPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
 
-        
+        <div class="h-75  border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
+
+            <div class="text-center" style="position: relative;top: 20px">
+                <h1 class="mt-3 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">RESET PASSWORD</h1>
+            </div>
+
+            <form class="ms-5 me-5" style="position: relative; top: 50px;">
+                <!-- username input -->
+                <div class="form-outline mb-4 ms-5 me-5">
+                    <input type="text" id="enterusername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                    <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                </div>
+
+                <!-- Password input -->
+                <div class="form-outline mb-4 ms-5 me-5">
+                    <input type="password" id="newpassword" class="form-control  border border-2 border-white bg-light" />
+                    <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">New password</label>
+                </div>
+
+                <!-- Password input -->
+                <div class="form-outline mb-4 ms-5 me-5">
+                    <input type="password" id="confirmpassword" class="form-control  border border-2 border-white bg-light" />
+                    <label class="form-label text-white fw-light" for="confirmpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Confirm password</label>
+                </div>
+
+                <div class="mb-4  me-5 ms-5">
+                    <!-- Submit button -->
+                    <button type="button" class="btn btn-block text-center text-white" style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black;">Reset</button>
+                </div>
+            </form>
+
+        </div>
 
     </section>
-    <!--<section id="RegisterPage" style="width: 100%; background-color: yellow"></section>
-    <section id="CustomerDashBoard" style="width: 100%; height: 100vh ;background-color: green"></section>
+
+    <section id="RegisterPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
+
+        <div class=" border border-3 border-white rounded-1 shadow" style="position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;width: 500px;height: 600px;background-image: radial-gradient(circle at top,#EAAA01,#000);">
+
+            <div class="text-center" style="position: relative;top: 20px">
+                <h1 class="mt-2 text-white fw-bold fst-italic" style="font-family: 'PT Serif', serif;">REGISTER</h1>
+            </div>
+
+            <form class="ms-5 me-5" style="position: relative; top: 50px;">
+
+                <div class="row">
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="text" id="username" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="enterusername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Username</label>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <!-- Password input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="password" id="password" class="form-control  border border-2 border-white bg-light" />
+                            <label class="form-label text-white fw-light" for="newpassword" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px">Password</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="text" id="customername" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="customername" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Full Name</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="tel" id="contactnumber" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="contactnumber" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Contact</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="text" id="customeraddress" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="customeraddress" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Address</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <input type="email" id="email" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="email" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Email</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-4 ms-4 me-4">
+                            <input type="text" id="nic" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="nic" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">NIC</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <!-- username input -->
+                        <div class="form-outline mb-4 ms-4 me-4">
+                            <input type="text" id="drivinglicense" class="form-control  border border-2 border-white bg-light rounded-3" />
+                            <label class="form-label text-white fw-light" for="drivinglicense" style="font-family: 'Edu VIC WA NT Beginner', cursive;font-size: 18px;">Driving License NO</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-4 me-5 ms-5">
+                    <!-- Submit button -->
+                    <button type="button" class="btn btn-block text-center text-white" style="display: inline;position: relative;left: 0;right: 0; margin: auto;background-color: goldenrod;box-shadow: -3px 6px 18px -2px black;">Register</button>
+                </div>
+            </form>
+
+        </div>
+
+    </section>
+
+    <!--<section id="CustomerDashBoard" style="width: 100%; height: 100vh ;background-color: green"></section>
     <section id="AdminPanel" style="width: 100%; height: 100vh ;background-color: purple"></section>
     <section id="CarAddPage" style="width: 100%; height: 100vh ;background-color: orange"></section>
     <section id="DriverAddPage" style="width: 100%; height: 100vh ;background-color: #b6effb"></section>
